# sora-api

./: .envrc  README.md  example.env  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ac2c65167e2_init.py
backend/src/: main.py
backend/src/core/: config.py  logging_setup.py
backend/src/db/: base.py
backend/src/integration/: __init__.py
backend/src/integration/api/: dependencies.py
backend/src/integration/domain/: default_config.yaml  dtos.py  entities.py  exceptions.py  mappers.py  schemas.py
backend/src/integration/infrastructure/: http_api_client.py  task_runner.py
backend/src/integration/infrastructure/sora/: adapter.py  api.py  dependencies.py  file_repository.py  main.py  task_repository.py
backend/src/integration/infrastructure/sora/llm_provider/: __init__.py  config.py
backend/src/integration/infrastructure/sora/llm_provider/browsers/: base.py  chrome.py  edge.py  firefox.py
backend/src/integration/infrastructure/sora/llm_provider/directors/: base.py  sora.py
backend/src/integration/infrastructure/sora/llm_provider/providers/: base.py  chatgpt.py  claude.py
backend/src/integration/infrastructure/sora/llm_provider/utils/: browser_utils.py  preprocessing.py
backend/src/task/api/: dependencies.py  rest.py
backend/src/task/application/interfaces/: task_repository.py  task_runner.py  task_uow.py
backend/src/task/application/use_cases/: create_task.py  get_task.py  run_image_task.py  run_task.py
backend/src/task/domain/: dtos.py  entities.py  mappers.py
backend/src/task/infrastructure/db/: orm.py  task_repository.py  unit_of_work.py
backend/tests/: conftest.py  test_task.py
llm_provider/: __init__.py  default_config.yaml
llm_provider/browsers/: chrome.py
llm_provider/utils/: browser_utils.py
rest/: adapter.py  api.py  dtos.py  entities.py  task_repository.py
